# Elastic-Multi-Tier-Intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: gsm8k.yaml  truthfulqa.yaml
configs/experiment/: full_a100.yaml
configs/federated/: default.yaml
configs/model/: llama3_8b.yaml  phi3_mini.yaml
experiments/: test.ipynb
outputs/2026-01-12/17-02-31/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/17-06-06/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/17-10-45/.hydra/: hydra.yaml
outputs/2026-01-12/17-13-10/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/17-17-17/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-12/17-26-18/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/17-27-44/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/17-33-21/.hydra/: hydra.yaml
outputs/2026-01-12/17-35-09/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-12/17-38-12/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: evaluate_hybrid.py  evaluate_local.py  hello_hydra.py  train_federated.py
src/agents/: edge_agent.py  edge_coordinator.py
src/data/: dataset.py
src/federated/: client.py  strategy.py
src/models/: cloud_model.py  edge_model.py  verifier.py
src/utils/: energy.py  escalation_policy.py  logging.py  metrics.py
