# pyproject.toml
[tool.poetry]
name = "elastic-multi-tier-reasoning"
version = "0.1.0"
description = "Elastic Multi-Tier Intelligence: Cloud–Edge–Federated Reasoning Systems"
authors = ["Md. Ashaduzzaman <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/elastic-multi-tier-reasoning"  # update if you have one
keywords = ["federated-learning", "edge-ai", "llm", "reasoning", "multi-tier", "hallucination-reduction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.0"
transformers = "^4.45.0"
datasets = "^2.18.0"
flwr = {extras = ["simulation"], version = "^1.11.0"}  # Flower with simulation support
hydra-core = "^1.3.2"
bitsandbytes = "^0.45.0"
accelerate = "^0.30.0"
peft = "^0.10.0"
sentencepiece = "0.2.0"
protobuf = "4.25.0"
wandb = "^0.16.0"
codecarbon = "^2.7.0"
omegaconf = "2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.3.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
evaluate-hybrid = "scripts.evaluate_hybrid:main"
train-federated = "scripts.train_federated:main"
evaluate-local = "scripts.evaluate_local:main"  # if you add it later

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "PL", "UP"]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # set to true later when more typed